# ci-nox-test

./: noxfile.py  pyproject.toml
.github/workflows/: ci.yaml
tests/: test_basic.py
