[tool.poetry]
name = "ci-nox-test"
version = "0.1.0"
description = ""
authors = ["Germanhydrogen <admin@germanhydrogen.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
nox = "^2025.2.9"
nox-poetry = "^1.1.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
